# satellite_dataloader

./: .flake8  .gitignore  .gitlab-ci.yml  pyproject.toml
satdl/: __init__.py  datasets.py  utils.py
satdl/core/: enums.py
satdl/datasets/: __init__.py  _dataset_base.py  _segment_gatherer.py  dataset_base.py  gridded_dataset.py  image_folder.py  satpy_folder.py  static_image_folder.py
satdl/definitions/: slot_MSG_CE.yaml
satdl/tests/: test_georeferencing.py  test_gridded_dataset.py  test_grouped_dataset.py  test_image_folder_dataset.py  test_satdl.py  test_satpy_folder.py  test_segment_gatherer.py  test_slt.py  test_utils.py
scripts/: format.sh  lint.sh  test.sh
