[tool.poetry]
name = "satellite-dataloader"
version = "0.1.0"
description = "Satellite dataloader"
authors = ["Jakub Seidl <jakub.seidl@email.cz>"]
readme = "README.md"
packages = [{include = "satdl"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
pyproj = "^3.3.1"
rasterio = "^1.3.0.post1"
satpy = "^0.37.0"
trollsift = "^0.4.0"
xarray = "^2022.6.0"


[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-isort = "^4.2.0"
flake8-unused-arguments = "^0.0.11"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mypy = "^0.971"
pytest-datafiles = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["datafiles: load datafiles"]

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
force_to_top = ["typing"]
profile = "black"
lines_between_sections = 1
lines_after_imports = 2
line_length = 110
force_sort_within_sections = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true

cache_dir = ".cache/mypy/"
